objects/scormanywhere__Course__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Avg_Stars__c</fullName>
        <formula>scormanywhere__Total_Stars__c /  IF(scormanywhere__Total_Votes__c != 0, scormanywhere__Total_Votes__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Stars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Community_Path__c</fullName>
        <label>Community Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Completion_Progress_Threshold__c</fullName>
        <description>The minimum percent for video course was completed</description>
        <label>Completion Progress Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Conversion_Status__c</fullName>
        <label>Conversion Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Conversion Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scormanywhere__Course_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Version</label>
        <referenceTo>scormanywhere__Course_Version__c</referenceTo>
        <relationshipLabel>Media</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Disable_Autoplay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Autoplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Disable_Playback_Speed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Playback Speed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Disable_Scroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Scroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Duration__c</fullName>
        <label>Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_All_External_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable For All External Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_All_Internal_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable For All Internal Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Enable_Subtitles_By_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Subtitles By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Is_Current_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Launch_Interactive_Content_in_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Interactive Content in Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Media_Playbook_List__c</fullName>
        <label>Media Playbook List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scormanywhere__Media_Playbook__c</fullName>
        <label>Media Playbook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Mute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Activity_Id__c</fullName>
        <label>SCORM Activity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_File_Size__c</fullName>
        <label>SCORM File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Keywords__c</fullName>
        <inlineHelpText>Keywords need to be separated by commas</inlineHelpText>
        <label>Keywords</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Manifest_Data_Part_2__c</fullName>
        <label>SCORM Manifest Data Part 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Manifest_Data_Part_3__c</fullName>
        <label>SCORM Manifest Data Part 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Manifest_Data_Part_4__c</fullName>
        <label>SCORM Manifest Data Part 4</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Manifest_Data__c</fullName>
        <label>SCORM Manifest Data Part 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Title__c</fullName>
        <label>SCORM Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Training_Path__c</fullName>
        <label>SCORM Training Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__SCORM_Training_Type__c</fullName>
        <label>SCORM Training Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Sendable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sendable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Original Media</fullName>
                </value>
                <value>
                    <fullName>Related Media</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Stand_Deliver_Example</fullName>
                    <label>Stand and Deliver Example</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scormanywhere__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scormanywhere__Test_Progress__c</fullName>
        <formula>scormanywhere__Test_Transcript__r.scormanywhere__Progress__c</formula>
        <label>Test Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Test_Score__c</fullName>
        <formula>IF( ISNULL( scormanywhere__Test_Transcript__c ), &apos;&apos;,   TEXT(ROUND(scormanywhere__Test_Transcript__r.scormanywhere__Score__c, 0)))</formula>
        <label>Test Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Test_Status__c</fullName>
        <formula>scormanywhere__Test_Transcript__r.scormanywhere__Status__c</formula>
        <label>Test Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Test_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Transcript</label>
        <referenceTo>scormanywhere__Transcript__c</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Tested_By__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; scormanywhere__Test_Transcript__r.scormanywhere__User__c, scormanywhere__Test_Transcript__r.scormanywhere__User__r.FirstName &amp; &apos; &apos; &amp; scormanywhere__Test_Transcript__r.scormanywhere__User__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tested By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Tested_Date__c</fullName>
        <formula>scormanywhere__Test_Transcript__r.scormanywhere__Launch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Thumbnail_Path__c</fullName>
        <label>Thumbnail Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Attempts__c</fullName>
        <label>Total Attempts</label>
        <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Attempts__c</summarizedField>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Dislikes__c</fullName>
        <label>Total Dislikes</label>
        <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Dislikes__c</summarizedField>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Likes__c</fullName>
        <label>Total Likes</label>
        <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Likes__c</summarizedField>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Stars__c</fullName>
        <label>Total Stars</label>
        <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Stars__c</summarizedField>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Unique_Views__c</fullName>
        <label>Total Unique Views</label>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Total_Votes__c</fullName>
        <label>Total Votes</label>
        <summarizedField>scormanywhere__Transcript_Stats__c.scormanywhere__Votes__c</summarizedField>
        <summaryForeignKey>scormanywhere__Transcript_Stats__c.scormanywhere__Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Uploaded_Org_Id__c</fullName>
        <label>Uploaded Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Media</label>
    <listViews>
        <fullName>scormanywhere__All</fullName>
        <columns>NAME</columns>
        <columns>scormanywhere__Description__c</columns>
        <columns>scormanywhere__Status__c</columns>
        <columns>scormanywhere__Duration__c</columns>
        <columns>scormanywhere__SCORM_Keywords__c</columns>
        <columns>scormanywhere__SCORM_Language__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>scormanywhere__Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>